Freedom Sanbox Ant Deploy/src/objects/Remarks__c.object
<CustomObject>
    <description>Space for ‘Remarks’ where the FP can give additional advice.(Except for Goal)</description>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Remark related entity</description>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Remarks</relationshipLabel>
        <relationshipName>Remarks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remark__c</fullName>
        <description>Space for ‘Remarks’ where the FP can give additional advice(Except for Goal)</description>
        <inlineHelpText>space for ‘Remarks’ where the FP can give additional advice</inlineHelpText>
        <label>Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RichText_Remark__c</fullName>
        <label>RichText Remark</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Remark</label>
    <nameField>
        <label>Remarks Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remarks</pluralLabel>
    <recordTypes>
        <fullName>CashFlow</fullName>
        <active>true</active>
        <label>CashFlow</label>
    </recordTypes>
    <recordTypes>
        <fullName>EmergencyPlanning</fullName>
        <active>true</active>
        <label>EmergencyPlanning</label>
    </recordTypes>
    <recordTypes>
        <fullName>GeneralInsurancePlanning</fullName>
        <active>true</active>
        <label>GeneralInsurancePlanning</label>
    </recordTypes>
    <recordTypes>
        <fullName>LifeInsurancePlanning</fullName>
        <active>true</active>
        <label>LifeInsurancePlanning</label>
    </recordTypes>
    <recordTypes>
        <fullName>Networth</fullName>
        <active>true</active>
        <description>It will contain the Networth Remarks</description>
        <label>Networth</label>
    </recordTypes>
    <recordTypes>
        <fullName>PortfolioSummary</fullName>
        <active>true</active>
        <label>PortfolioSummary</label>
    </recordTypes>
    <recordTypes>
        <fullName>RiskProfiler</fullName>
        <active>true</active>
        <description>Remark for RiskProfile</description>
        <label>RiskProfiler</label>
    </recordTypes>
    <recordTypes>
        <fullName>SuccessionPlanning</fullName>
        <active>true</active>
        <label>SuccessionPlanning</label>
    </recordTypes>
    <recordTypes>
        <fullName>SummaryActionPlan</fullName>
        <active>true</active>
        <label>SummaryActionPlan</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>